# python-intermediate-inflammation

./: .gitignore  exercise.py  inflammation-analysis.py  pyproject.toml  requirements.txt  setup.py  test.ipynb
.github/workflows/: main.yml
inflammation/: models.py  patient.py
tests/: test_models.py
